--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         ports:
           - "5672:5672"
     name: OTP ${{matrix.pair.otp_version}} / Elixir ${{matrix.pair.elixir}}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         include:
