Fix publishing package to hex.pm
The build started failing with this error:

```
===> Compiling src/rabbit_data_coercion.erl failed
rabbit_data_coercion.erl:70: syntax error before: '||'

rabbit_data_coercion.erl:11: function atomize_keys/1 undefined
rabbit_data_coercion.erl:66: spec for undefined function atomize_keys/1
```

I think it may be because the publish action uses too old Erlang
version.

I went ahead and updated the publish action to use new Erlang. Also, it
used some outdated custom action to publish the package which was quite
fishy so I got rid of that as well.

AUTO-1830

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,10 +9,19 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Erlang and Elixir
+        uses: erlef/setup-beam@v1
+        with:
+          otp-version: 27.1
+          elixir-version: 1.17
+
       - name: Check out
         uses: actions/checkout@v2
 
+      - name: Run mix deps.get
+        run: mix deps.get
+
       - name: Publish package to hex.pm
-        uses: wesleimp/action-publish-hex@ae719f0fead451221d2ca0127c0aae70c5f90b4c
+        run: mix hex.publish --yes
         env:
           HEX_API_KEY: ${{ secrets.HEX_API_KEY }}
